<resources>
    <string name="app_name">ExerciseMenu</string>
    <string name="label_app">LOGIN USER</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="button">SIGN-IN</string>
    <string name="menu_hitung">Menu Hitung Bangun Datar</string>
    <string name="persegi">Menghitung Persegi</string>
    <string name="lingkaran">Menghitung Lingkaran</string>
    <string name="persegi_panjang">Menghitung Persegi Panjang</string>
    <string name="segitiga">Menghitung Segitiga</string>
    <string name="Trapesium">Menghitung Trapesium</string>
    <string name="lp">Luas Persegi</string>
    <string name="kp">Keliling Persegi</string>
    <string name="ll">Luas Lingkaran</string>
    <string name="kl">Keliling Lingkaran</string>
    <string name="lpp">Luas Persegi Panjang</string>
    <string name="kpp">Keliling Persegi Panjang</string>
    <string name="ls">Luas Segitiga</string>
    <string name="ks">Keliling Segitiga</string>
    <string name="lt">Luas Trapesium</string>
    <string name="kt">Keliling Trapesium</string>
    <string name="masukan_sisi">Masukkan Sisi</string>
    <string name="btn_luas">Hitung Luas</string>
    <string name="btn_keliling">Hitung Keliling</string>
    <string name="jari">Masukkan jari-jari</string>
    <string name="panjang">Masukkan Panjang</string>
    <string name="lebar">Masukkan Lebar</string>
    <string name="lppanjang">Luas Persegi Panjang</string>
    <string name="kppanjang">Keliling Persegi Panjang</string>
    <string name="alas">Alas</string>
    <string name="tinggi">Masukkan Tinggi</string>
    <string name="sisi_miring">Masukkan Sisi Miring</string>
    <string name="ab">Masukkan Panjang AB</string>
    <string name="ef">Masukkan Panjang EF</string>
    <string name="t">Masukkan Panjang T</string>
    <string name="ae">Masukkan Panjang AE</string>
    <string name="hasil">Hasil</string>
</resources>
