<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Hitung">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">



        <TextView
            android:id="@+id/TV_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/menu_hitung"
            android:textColor="@color/text"
            android:textSize="25dp"/>

        <TextView
            android:id="@+id/TV_persegi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/persegi"
            android:textColor="@color/text"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/TV_lingkaran"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lingkaran"
            android:textColor="@color/text"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/TV_persegipanjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/persegi_panjang"
            android:textColor="@color/text"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/TV_segitiga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/segitiga"
            android:textColor="@color/text"
            android:textSize="25dp"/>
        <TextView
            android:id="@+id/TV5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Trapesium"
            android:textColor="@color/text"
            android:textSize="25dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>