<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/linierlayout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/TVlabel_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/label_app"
            android:textColor="@color/text"
            android:textSize="35dp"/>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Tv_username"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textColor="@color/text"/>
                <EditText
                    android:id="@+id/Et_Username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/masukkan_username"
                    android:inputType="textPersonName"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/Tv_password"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Password"
                    android:textSize="20sp"
                    android:textColor="@color/text"/>
                <EditText
                    android:id="@+id/Et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/masukkan_password"
                    android:inputType="textPassword"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnok"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_gravity="end"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20sp"
                android:onClick="Pindah"
                android:background="@color/btn"
                android:text="@string/button"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>