<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".keliling_segitiga">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/segitiga"
            android:layout_marginLeft="80dp"/>

        <TextView
            android:id="@+id/tv_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/ks"
            android:textColor="@color/text"
            android:textSize="35dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_alas"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/alas"
                android:textSize="20sp"
                android:textColor="@color/text"/>
            <EditText
                android:id="@+id/Et_alas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_tinggi"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/tinggi"
                android:textSize="20sp"
                android:textColor="@color/text"/>
            <EditText
                android:id="@+id/Et_tinggi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_sisimiring"
                android:layout_width="200dp"
                android:layout_height="41dp"
                android:text="@string/sisi_miring"
                android:textColor="@color/text"
                android:textSize="20sp" />
            <EditText
                android:id="@+id/Et_sisimiring"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_keliling_segitiga"
                android:layout_width="150dp"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:background="@color/btn"
                android:text="@string/btn_keliling"/>

            <TextView
                android:id="@+id/hsl_keliling_segitiga"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hasil"
                android:textColor="@color/text"
                android:textAlignment="center"
                android:layout_marginTop="20sp"
                android:textSize="25sp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>