<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".keliling_lingkaran">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/lingkaran"
            android:layout_marginLeft="80dp"/>

        <TextView
            android:id="@+id/tv_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/ll"
            android:textColor="@color/text"
            android:textSize="35dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_jari"
                android:layout_width="134dp"
                android:layout_height="wrap_content"
                android:text="@string/jari"
                android:textSize="20sp"
                android:textColor="@color/text"/>
            <EditText
                android:id="@+id/Et_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"/>
        </TableRow>

        <Button
            android:id="@+id/btn_klingkaran"
            android:layout_width="150dp"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="130sp"
            android:background="@color/btn"
            android:text="@string/btn_keliling"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>